--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,10 @@
   <title>IAportafolio</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- <base href="/"> -->
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <!-- <link id="app-theme" rel="stylesheet" type="text/css" href="src/styles.css"> -->
+
 </head>
 <body>
   <app-root></app-root>
